Fix list item heading too wide

--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,11 @@ img {
 }
 
 .member-search-result {
-  margin: 10px 5px !important;
+  margin: 15px 5px !important;
+}
+
+.md-list-item-text h3 {
+  white-space: normal !important;
 }
 
 
